# dav_tools

./: .gitignore  .readthedocs.yaml  Makefile  README.md  git-quick-commit.py  pyproject.toml  test.py  update.py
docs/: conf.py  index.rst
src/dav_tools/: _arg_parser.py  commands.py  database.py  devtools.py  files.py  messages.py  requirements.py  text_color.py
src/dav_tools/messages/: __init__.py
src/dav_utils_DAVIDE_PONZINI/: commands.py  messages.py  text_color.py
src/utils_DAVIDE_PONZINI/: __init__.py  _arg_parser.py  devtools.py  messages.py  text_color.py  user.py
tests/: test_commands.py
