[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils_DAVIDE_PONZINI"
version = "0.0.1"
authors = [
  { name="Davide Ponzini", email="davide.ponzini95@gmail.com" },
]
description = "Various utilies to aid in program developent"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"